kubernetes-monitoring/web-deploy-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-main                              # Название нашего объекта Deployment
spec:
  replicas: 3
  selector:                              # Укажем, какие поды относятся к нашему Deployment:
    matchLabels:                           # - это поды с меткой
      app: web-main                               # app и ее значением web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:                              # Теперь зададим шаблон конфигурации пода
    metadata:
      name: web-main                          # Название Pod
      labels:                            # Метки в формате key: value
        app: web-main
    spec:                                # Описание Pod
      containers:                        # Описание контейнеров внутри Pod
        - name: web-main                      # Название контейнера
          image: isieiam/nginx-test:2.0  # Образ из которого создается контейнер
          readinessProbe:                # Добавим проверку готовности
            httpGet:                     # веб-сервера отдавать
              path: /index.html          # контент
              port: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
          volumeMounts:
          - name: app
            mountPath: /app
      volumes:
        - name: app
          emptyDir: {}
