kubernetes-monitoring/nginx-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-exporter-svc
  labels:
    app: nginx-exporter
spec:
  selector:
    app: nginx-exporter
  type: ClusterIP
  ports:
    - name: nginx-exporter
      protocol: TCP
      port: 9113
